# ros1_roverpro_auto_dock

./: CMakeLists.txt  LICENSE  README.md  nodelet_plugins.xml  package.xml
cfg/: DetectorParams.cfg
launch/: 2_cams.launch  all_cams.launch  cv_camera.launch  example.launch  example_all.launch  image_sub_node.launch  image_sub_nodelet.launch  nodelet.launch  usb_cam.launch
misc/: ost.txt  ost.yaml
plugins/: nodelet_plugins.xml
scripts/: auto_dock.py  create_markers.py
src/: aruco_detect.cpp  aruco_detect_nodelet.cpp  image_sub_node.cpp  image_sub_nodelet.cpp
