<?xml version="1.0"?>
<package format="2">
  <name>rr_auto_dock</name>
  <version>0.0.0</version>
  <description>The rr_auto_dock package</description>

  <maintainer email="jack@digilabs.io">Jack Kilian</maintainer>
  <maintainer email="fragale@digilabs.io">Nick Fragale</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rr_auto_dock</url>
  <author>Jack Kilian</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <depend>aruco</depend>

</package>
